<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardUseCompatPadding="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:background="@color/bgContent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/produit_pic_imgv"
                    android:background="@drawable/drawable_imageclient"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:padding="5dp"
                    android:src="@mipmap/no_image_icon" />

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/ContentMainBadgeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="0dp"
                        android:text="@string/produit_badge" />

                    <TextView
                        android:id="@+id/produit_name_textv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:layout_marginStart="10dp"
                        android:text="sdfsfsfsfgsgfdgfsfsdf" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_marginTop="10dp"
                                style="@style/ContentMainBadgeTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_marginBottom="0dp"
                                android:text="@string/codebarre_badge" />

                            <TextView
                                android:id="@+id/codebarre_textv"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:text="123000045824"
                                android:layout_marginStart="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:gravity="end"
                            android:layout_marginEnd="10sp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_marginTop="10dp"
                                style="@style/ContentMainBadgeTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_marginBottom="0dp"
                                android:text="@string/stock_badge" />

                            <TextView
                                android:id="@+id/stock_textv"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:text="30"
                                android:gravity="start"
                                android:layout_marginStart="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.boulouza.uk2018.pme_provente.adapters.ExpandableLinearLayout
        android:id="@+id/expandableView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandDuration="500">


        <!-- content body layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgContent"
            android:orientation="vertical"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="9dp">

            <!-- avatar and name part -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/content_avatar_title"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/reference_badge" />

                <TextView
                    android:id="@+id/reference_textv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_below="@id/content_avatar_title"
                    android:text="235456557456745"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />

            </RelativeLayout>

            <!-- divider line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="9dp"
                android:src="@color/contentDividerLine" />

            <!-- addresses part -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/content_from_badge"
                        style="@style/ContentMainBadgeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/pv1" />

                    <TextView
                        android:id="@+id/pv1_textv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/content_from_badge"
                        android:layout_below="@id/content_from_badge"
                        android:text="@string/pv1_prix"
                        android:visibility="visible"
                        android:textColor="@color/mainTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/content_to_badge"
                        style="@style/ContentMainBadgeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/pv2" />

                    <TextView
                        android:id="@+id/pv2_textv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/content_to_badge"
                        android:layout_below="@id/content_to_badge"
                        android:text="@string/pv2_prix"
                        android:visibility="visible"
                        android:textColor="@color/mainTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/arrow" />

                </RelativeLayout>

            </LinearLayout>

            <!-- divider line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="7dp"
                android:src="@color/contentDividerLine" />

            <!-- dates part -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/content_delivery_date_badge"
                        style="@style/ContentMainBadgeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/pv3" />

                    <TextView
                        android:id="@+id/pv3_textv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/content_delivery_date_badge"
                        android:layout_below="@id/content_delivery_date_badge"
                        android:text="@string/pv3_prix"
                        android:visibility="visible"
                        android:textColor="@color/mainTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/content_deadline_badge"
                        style="@style/ContentMainBadgeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/tva_badge" />

                    <TextView
                        android:id="@+id/tva_textv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/content_deadline_badge"
                        android:layout_below="@id/content_deadline_badge"
                        android:text="@string/tva"
                        android:textColor="@color/mainTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <!-- request button -->

        </LinearLayout>

    </com.boulouza.uk2018.pme_provente.adapters.ExpandableLinearLayout>
</LinearLayout>
