<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySales">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/take_order_leftpart_width"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <android.support.design.widget.AppBarLayout

                android:layout_width="@dimen/take_order_leftpart_width"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" >

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/header_first_bg"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">

                <TextView
                    android:id="@+id/num_bon_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="N° BON: "
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/num_bon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="000118"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:typeface="normal"
                    android:layout_toRightOf="@+id/num_bon_label"
                    android:layout_toEndOf="@+id/num_bon_label" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/color_test"
                    android:layout_toRightOf="@+id/num_bon1"
                    android:layout_toEndOf="@+id/num_bon1" />

                <TextView
                    android:id="@+id/client_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="CLT : "
                    android:layout_marginLeft="5sp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/divider"
                    android:layout_toEndOf="@+id/divider"
                    android:textColor="#000000"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/client_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="BOULOUZA NASSER"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:typeface="normal"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/client_name_label"
                    android:layout_toEndOf="@+id/client_name_label" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_reciept_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/item_title_width"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/product"
                    android:id="@+id/items"
                    android:gravity="left"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/quantity"
                    android:id="@+id/quantity"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/price"
                    android:id="@+id/price"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_below="@+id/header"
            android:layout_width="@dimen/take_order_leftpart_width"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_container1"
                android:layout_width="@dimen/take_order_leftpart_width"
                android:layout_height="match_parent">

            </FrameLayout>

        </RelativeLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/color_herder_reciept"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/header_reciept_bg"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:weightSum="1"
                android:id="@+id/linearLayout3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/Blue_Peter_river"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/BtnSend"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/valide"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true" />


                    </RelativeLayout>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/btnRequest"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/nephritis"
                        android:text="5000.00 DA"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:gravity="end|center_vertical"
                        android:id="@+id/total" />
                </LinearLayout>
            </LinearLayout>


            <FrameLayout
                android:id="@+id/listview_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_above="@+id/linearLayout3"
                android:layout_alignParentTop="true">

            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>